# BankOCR

./: main.py  pyproject.toml  run_me.ipynb  use_pdf_input.ipynb
output_statements/: extracted_chase_highres.csv  white_box_coords_chase_highres.json
