[project]
name = "bankocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=37.4.0",
    "jupyter>=1.1.1",
    "notebook>=7.4.4",
    "ollama>=0.5.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pytesseract>=0.3.13",
]
